Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ published: 2020-06-03
 url: http://proceedings.mlr.press
 layout: proceedings
 series: Proceedings of Machine Learning Research
+issn: 2640-3498
 id: AISTATS2020
 month: 0
 cycles: false
@@ -38,8 +39,11 @@ baseurl: "/v108"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+plugins:
+- jekyll-remote-theme
+remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
-github:
+ghub:
   edit: true
   repository: v108
 display:
@@ -60,5 +64,6 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
-# Auto generated from /Users/neil/mlresearch/v108/aistats20.bib
+# Original source:  /Users/neil/mlresearch/bibtex.bib
