Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ baseurl: "/v108"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+style: pmlr
 plugins:
 - jekyll-remote-theme
 remote_theme: lawrennd/proceedings
