--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ display:
 email: ''
 conference:
   name: International Conference on Artificial Intelligence and Statistics
-  url: 
+  url: http://aistats.org/aistats2020/
   location: Online
   dates:
   - 2020-08-26
