Update URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ volume: 108
 start: 2020-08-26
 end: 2020-08-28
 published: 2020-06-03
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 layout: proceedings
